Fix navlink alignment

--- a/css/styling.css
+++ b/css/styling.css
@@ -176,7 +176,7 @@ hr.small {
 }
 
 .nav-links {
-    margin-left:-10px;
+    margin-left:-40px;
 }
 
 #navbrand {
